--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap WYSIWYG rich text editor from MindMup</title>
+    <title>Tiny, opensource, Bootstrap WYSIWYG rich text editor from MindMup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="opensource rich wysiwyg text editor jquery bootstrap execCommand html5" />
-    <meta name="description" content="opensource rich text editor wiyiwyg plugin for Bootstrap JQuery" />
+    <meta name="description" content="This tiny JQuery Bootstrap WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
     <link rel="apple-touch-icon" href="//mindmup.s3.amazonaws.com/lib/img/apple-touch-icon.png" />
     <link rel="shortcut icon" href="http://mindmup.s3.amazonaws.com/lib/img/favicon.ico" >
     <link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
