typo in indent/outdent shortcuts

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div class="btn-group">
         <a class="btn " data-edit="insertunorderedlist" title="Bullet list"><i class="icon-list-ol"></i></a>
         <a class="btn " data-edit="insertorderedlist" title="Number list"><i class="icon-list-ul"></i></a>
-        <a class="btn " data-edit="outdent" title="Reduce indent (Ctrl/Cmd+Shift+Tab)"><i class="icon-indent-left"></i></a>
-        <a class="btn " data-edit="indent" title="Indent (Ctrl/Cmd+Tab)"><i class="icon-indent-right"></i></a>
+        <a class="btn " data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="icon-indent-left"></i></a>
+        <a class="btn " data-edit="indent" title="Indent (Tab)"><i class="icon-indent-right"></i></a>
       </div>
       <div class="btn-group">
         <a class="btn " data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i></a>
