--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       </p>
           <ul>
             <li>Automatically binds standard hotkeys for common operations on Mac and Windows</li>
+            <li>Drag and drop files from desktop to insert images</li>
             <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, FortAwesome and so on...</li>
             <li>Does not force any styling - it's all up to you</li>
             <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="https://developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
